--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ body{
 main{
     flex-grow: 1;
 }
+.imgDetalleProducto{
+    width: 50%;
+}
 @media all and (max-width: 767px){
     .banner-responsive{
         height: 250px;
